added twillio token

--- a/config/application.yml
+++ b/config/application.yml
@@ -12,3 +12,8 @@
 
 
 STRIPE_API_KEY: sk_test_OXgdfz0w0U80Ju0B1CBVBk9W
+
+TWILIO_ACCOUNT_SID: AC041c86be15c6fd8b1a6b7c67a593f960
+TWILIO_API_KEY: SKb60574ce520057b6806de1a3386e97d9
+TWILIO_API_SECRET: BPSpu1s1hu6L3NSO2BMVMn1D7BdVyTTX
+TWILIO_CHAT_SERVICE_SID: IS93dfb17c46ec49849f748c5ee53bb24e
